syntax = "proto3";
option java_multiple_files = true;

package com.mwu.aitok;

option java_package = "com.mwu.aitok";

message FellowRequest {
   int64  user_id = 1;
   int64  follow_user_id = 2;
}

message FellowResponse {
   bool success = 1;
   string message = 2;
}

message CountRequest {
   int64  user_id = 1;
}

message CountResponse {
   int64  count = 1;
}


service SocialService {
  rpc apiWeatherFollow(FellowRequest) returns (FellowResponse);

  rpc apiUserFollowCount(CountRequest) returns (CountResponse);

  rpc apiUserFansCount(CountRequest) returns (CountResponse);

}